style.css
/* ... */
.SectionTwoTxt h2{
    font-family: "Work Sans", sans-serif;
    font-size: 2.5rem;
    color: #1D2939;
}

.SectionTwoTxt p{
    color: #3D3D3D;
    font-size: 1.125;
    font-weight: 400;
}


.card-and-btn-container{
    width: 100%;
    height: auto;
    display: flex;
    flex-direction: column;
    justify-content: flex-start;
    align-items: flex-start;
    row-gap: 2.5rem;
}
.card{
    width: 100%;
    height: auto;
    display: flex;
    flex-direction: column;
    justify-content: start;
    align-items: start;
    row-gap: 1.75rem;
}
.cardImg{
    width: 100%;
    height: auto;
}

.cardImg img{
    width: 100%;
    height: auto;
}
.CardText{
    width: 100%;
    height: auto;
    display: flex;
    flex-direction: column;
    justify-content: start;
    align-items: start;
    row-gap: 0.75rem;

}
.CardText h5{
    font-family: Work Sans;
    font-size: 1.625rem;
    color: #1D2939;
}
.CardText p{
    font-size: 1rem;
    color: #444F5F;
    line-height: 1.6rem;
}
.CardBtn{
    display: flex;
    flex-direction: row;
    align-items: center;
    text-decoration: none;
    color: #191919;
    font-size: 1.125rem;
    font-weight: 600;
    column-gap: 1rem;
}

.CardBtn:hover{
    display: flex;
    flex-direction: row;
    align-items: center;
    text-decoration: none;
    color: #191919;
    font-size: 1.138rem;
    font-weight: 600;
    column-gap: 1.5rem;
    cursor: pointer;
}

.SectionCont{
    padding: 3rem 15rem 3rem 15rem;
    width: 100%;
    height: auto;
    background-color: #FAFAFF;

}
.SectionThree{
    background-color: #CCCCFF;
    border-radius: 2rem;
    padding-left: 6rem ;
    padding-right: 6rem;
    display: flex;
    flex-direction: row;
    align-items: center;
    justify-content: start;
    column-gap: 5rem;
    width: 100%;
    height: auto;
}

.LeftContent{
   width: 50%;
   height: auto;
}

.SectionThreeTxt h2{
    color: #1D2939;
    font-family: "Work Sans", sans-serif;
    font-size: 4rem;
    margin-bottom: 0.5rem;
}

.SectionThreeTxt p{
    font-family: inter;
    font-size: 1.125rem;
    color: #444F5F;
    margin-bottom: 2.5rem;
}
.SectionThreeLinks{
    display: flex;
    align-items: center;
    flex-direction: row; flex-wrap: wrap;
    
}
.SectionThreeLinks p{
    font-family: "Work Sans", sans-serif;
    font-size: 1.125rem;
    color: #687992;
    margin-right: 24px;
    font-family: work Sans;
    font-size: 1.5rem; 
    font-weight: 550;
    margin-bottom: 1rem;
}

#one{
    font-family: "Work Sans", sans-serif;
    font-size: 1.5rem;
    color: #1D2939; 
    font-weight: 550;
}


.SectionFour{
    background-color: #FFE4AE;
    border-radius: 2rem;
    padding-left: 7.5rem;
    display: flex;
    flex-direction: row;
    align-items: center;
    justify-content: space-between;
    height: auto;
}

.S4LeftContent{
    width: 50%;
    height: auto;
    display: flex;
    flex-direction: column;
    justify-content: flex-start;
    align-items: start;
    row-gap: 1.5rem;
}
.SectionFourTxt{
    width: fit-content;
    height: auto;
    display: flex;
    flex-direction: column;
    justify-content: flex-start;
    align-items: center;
    row-gap: 1rem;
}
    .SectionFourTxt h2{
        color: #1D2939;
        font-family: "Work Sans", sans-serif;
        font-size: 4rem;
}

.SectionFourTxt p{
    font-size: 1.125rem;
    color: #444F5F;
}

.SectionBtn button{
   background-color: #0729A2;
    color: #ffffff;
    border-style: none;
    padding: 1.25rem 2rem 1.25rem 2rem;
    border-radius: 8px;
    font-size: 1.2rem;
}

.FAQ-section{
    background-color: #ffffff;
    padding: 6rem 15rem 6rem 15rem;
    display: flex;
    flex-direction: column;
    row-gap: 3rem;
    align-items: flex-start;
    justify-content: space-evenly;
    width: 100%;
    height: auto;
}

.FAQ-section h2{
    font-size: 3.25rem;
    font-family: "Work Sans", sans-serif;
    width: 40%;
    height: auto;
}

.FAQ-container h5{
    font-family: Work Sans;
    font-size: 1.2rem;
    font-weight: 500;
}

.FAQ-container{
    width: 100%;
    height: auto;
    border: 1px solid #949494;
    border-radius: 1rem;
    background-color: #ffffff;
}

.FAQs{
    width: 100%;
    height: auto;
    display: flex;
    flex-direction: column;
    justify-content: start;
    align-items: start;
    padding:1rem;
}
.FAQ-1 {
    width: 100%;
    height: auto;
    display: flex;
    flex-direction: column;
    justify-content: space-between;
    align-items: center;
    padding:1rem 1.5rem 1rem 1.5rem;
    border-bottom: 1px solid #949494;
    background-color: #ffffff;
    border-radius: 1rem 1rem 0rem 0rem;
}

.FAQ-7 {
    width: 100%;
    height: auto;
    display: flex;
    flex-direction: column;
    justify-content: space-between;
    align-items: center;
    padding:1rem 1.5rem 1rem 1.5rem;
    border-bottom: none;
    background-color: #ffffff;
    border-radius: 1rem 1rem 0rem 0rem;
}

.FAQ-question{
    width: 100%;
    height: auto;
    display: flex;
    flex-direction: row;
    justify-content: space-between;
    align-items: center;
    /* padding:1rem 1.5rem 1rem 1.5rem; */
    background-color: #ffffff;
    cursor: pointer;
}


.FAQ-answer{
    width: 100%;
    height: 0;
    overflow: hidden;
    background-color: #ffffff;
    
}

.FAQ-1.active .FAQ-answer{
        width: 100%;
        height: auto;
        padding: 1.5rem 0rem;
        background-color: #ffffff;
        display: flex;
        animation: fade 1s ease-in-out;
}

.FAQ-7.active .FAQ-answer{
    width: 100%;
    height: auto;
    padding: 1.5rem 0rem;
    background-color: #ffffff;
    display: flex;
    animation: fade 1s ease-in-out;
}

.FAQ-1.active svg{
    transform: rotate(180deg);
}

.FAQ-7.active svg{
    transform: rotate(180deg);
}

svg{
    transition: transform 0.6s ease-in;
}

@keyframes fade{
    from{
        opacity: 0;
        transform: translateY(-10px);
    }
    to{
        opacity: 1;
        transform: translateY(0px);
    }
    

}
/* ... */

